feat(api): add product image registration
